refactor: STEP-5 피드백 반영